<resources>
    <string name="app_name">InstaApp</string>
    <string name="username">naufal.idn</string>
    <string name="pict">profile picture</string>
    <string name="nama">Muhammad Naufal Fitriarto</string>

    <string name="jmlh_post">4</string>
    <string name="post">postingan</string>
    <string name="jmlh_follower">680</string>
    <string name="follower">follower</string>
    <string name="jmlh_following">638</string>
    <string name="following">following</string>
    <string name="bio">Halo nama saya Muhammad Naufal Fitriarto dari program studi Teknologi Rekayasa Perangkat Lunak angkatan 2025 \nNIM: 25/567748/SV/27252 \nKelas: PL3B2 \nMatkul: Praktikum Pemrograman Perangkat Bergerak Dasar</string>

    <string name="button_edit">edit profile</string>
    <string name="button_share">share profile</string>
    <string name="button_save">Simpan Perubahan</string>
    <string name="button_back">Kembali</string>

    <string name="hint_name">masukkan username baru</string>
    <string name="hint_bio">masukkan bio baru</string>
</resources>