<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
<!--Main Layout-->
<!--    <LinearLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:orientation="vertical">-->

<!--        <TextView-->
<!--            android:id="@+id/username"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/username"-->
<!--            android:textAlignment="center"-->
<!--            android:textSize="24sp"-->
<!--            android:textStyle="bold"/>-->

<!--        <LinearLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:orientation="horizontal"-->
<!--            android:layout_marginTop="16dp">-->

<!--            <ImageView-->
<!--                android:id="@+id/photo_profile"-->
<!--                android:layout_width="50dp"-->
<!--                android:layout_height="50dp"-->
<!--                android:src="@drawable/profile"-->
<!--                android:contentDescription="@string/pict"-->
<!--                />-->

<!--&lt;!&ndash;            <TextView&ndash;&gt;-->
<!--&lt;!&ndash;                android:id="@+id/nama"&ndash;&gt;-->
<!--&lt;!&ndash;                android:layout_width="match_parent"&ndash;&gt;-->
<!--&lt;!&ndash;                android:layout_height="wrap_content"&ndash;&gt;-->
<!--&lt;!&ndash;                android:layout_marginStart="8dp"&ndash;&gt;-->
<!--&lt;!&ndash;                android:text="@string/nama"/>&ndash;&gt;-->

<!--            <LinearLayout-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:orientation="horizontal">-->

<!--                <LinearLayout-->
<!--                    android:id="@+id/post"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:orientation="vertical">-->

<!--                    <TextView-->
<!--                        android:layout_width="match_parent"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:text="@string/jmlh_post"-->
<!--                        />-->
<!--                    <TextView-->
<!--                        android:layout_width="match_parent"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:text="@string/post"-->
<!--                        />-->
<!--                </LinearLayout>-->
<!--            </LinearLayout>-->

<!--        </LinearLayout>-->
<!--    </LinearLayout>-->

<!--    <TextView-->
<!--        android:id="@+id/txt_username"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_centerHorizontal="true"-->
<!--        android:text="@string/username"-->
<!--        android:textSize="24sp"-->
<!--        android:textStyle="bold"/>-->

<!--    <ImageView-->
<!--        android:id="@+id/photo_profile"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="50dp"-->
<!--        android:layout_marginTop="16dp"-->
<!--        android:layout_below="@id/txt_username"-->
<!--        android:src="@drawable/profile"-->
<!--        android:layout_alignParentEnd="true"-->
<!--        android:contentDescription="@string/pict"-->
<!--        />-->

<!--    <TextView-->
<!--        android:id="@+id/txt_name"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_below="@id/photo_profile"-->
<!--        android:layout_marginTop="16dp"-->
<!--        android:text="@string/nama"-->
<!--        />-->

<!--    <TextView-->
<!--        android:id="@+id/txt_post"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_below="@id/txt_jmlh_post"-->
<!--        android:layout_marginTop="8dp"-->
<!--        android:text="@string/post"-->
<!--        />-->

<!--    <TextView-->
<!--        android:id="@+id/txt_jmlh_post"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_below="@id/txt_name"-->
<!--        android:layout_marginTop="16dp"-->
<!--        android:text="@string/jmlh_post"-->
<!--        />-->

<!--    <TextView-->
<!--        android:id="@+id/txt_follower"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_below="@id/txt_jmlh_post"-->
<!--        android:layout_marginTop="8dp"-->
<!--        android:layout_alignParentEnd="true"-->
<!--        android:text="@string/follower"-->
<!--        />-->

<!--    <TextView-->
<!--        android:id="@+id/txt_jmlh_follower"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_below="@id/txt_name"-->
<!--        android:layout_marginTop="16dp"-->
<!--        android:layout_alignParentEnd="true"-->
<!--        android:text="@string/jmlh_following"-->
<!--        />-->

    <!-- FONDASI UTAMA -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- 1. TOP BAR -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/username"
                android:textStyle="bold"
                android:textSize="20sp"/>

        </RelativeLayout>

        <!-- 2. FOTO PROFIL & STATISTIK -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <!-- Foto Profil -->
            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@drawable/profile"
                android:contentDescription="@string/pict"/>

            <!-- Wadah Statistik -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:gravity="center"
                android:paddingStart="16dp">

                <!-- Ulangi blok ini 3x untuk Posts, Followers, Following -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/jmlh_post"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/post"
                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/jmlh_follower"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/follower"
                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/jmlh_following"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/following"
                        />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

        <!-- 3. NAMA & BIO -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="12dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bio"/>
        </LinearLayout>

        <!-- 4. TOMBOL EDIT & SHARE -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp"
            android:weightSum="2">

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="8dp"
                android:text="Edit profile" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Share profile" />
        </LinearLayout>

        <!-- 5. GRID FOTO (Contoh 1 Baris) -->
<!--        <LinearLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:orientation="horizontal"-->
<!--            android:layout_marginTop="24dp"-->
<!--            android:padding="6dp">-->
<!--            &lt;!&ndash; 3 ImageView dengan layout_weight="1" diletakkan di sini &ndash;&gt;-->

<!--            <ImageView-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_height="120dp"-->
<!--                android:layout_weight="1"-->
<!--                android:layout_margin="4dp"-->
<!--                android:src="@drawable/profile"/>-->

<!--        </LinearLayout>-->

        <!-- 5. GRID FOTO -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="16dp">

            <!-- BARIS PERTAMA -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3">

                <!-- Foto Kolom 1 -->
                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="120dp"
                    android:layout_weight="1"
                    android:layout_marginEnd="2dp"
                    android:layout_marginBottom="2dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/profile" />

                <!-- Foto Kolom 2 -->
                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="120dp"
                    android:layout_weight="1"
                    android:layout_marginEnd="2dp"
                    android:layout_marginBottom="2dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/profile" />

                <!-- Foto Kolom 3 (Tanpa margin end karena posisinya paling kanan) -->
                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="120dp"
                    android:layout_weight="1"
                    android:layout_marginBottom="2dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/profile" />

            </LinearLayout>

            <!-- BARIS KEDUA -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3">

                <!-- Foto Kolom 1 -->
                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="120dp"
                    android:layout_weight="1"
                    android:layout_marginEnd="2dp"
                    android:layout_marginBottom="2dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/profile" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</ScrollView>